feat: :fire: Se hace el uso de modulos

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Calculadora</title>
+  <script type="module" src="javascript/index.js"></script>
   <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
@@ -32,6 +33,5 @@
       <button id="clear" class="doble">C</button>
     </div>
   </div>
-  <script src="/javascript/index.js"></script>
 </body>
 </html>
